--- a/app/views/hotels/about.html.erb
+++ b/app/views/hotels/about.html.erb
@@ -1,2 +1,27 @@
-<h1>About Our Hotels</h1>
-<p>This page provides information about our hotels...</p>
+<!-- app/views/about.html.erb -->
+<div class="container mt-4">
+  <div class="jumbotron bg-success text-white">
+    <h1>About Our Hotels</h1>
+    <p>This page provides information about our hotels...</p>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Welcome to Our Hotel Chain</h5>
+          <p class="card-text">
+            Here at Our Hotels, we pride ourselves on offering top-notch accommodations and services. 
+            From luxurious suites to comfortable budget rooms, we cater to all types of travelers. 
+            Our hotels are located in prime destinations, offering convenient access to local attractions and amenities.
+          </p>
+          <p class="card-text">
+            Our dedicated staff ensures that every guest enjoys a comfortable and memorable stay. 
+            Learn more about our services, facilities, and what makes us stand out in the hospitality industry.
+          </p>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
