--- a/app/views/hotels/edit.html.erb
+++ b/app/views/hotels/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing hotel</h1>
+<!-- app/views/hotels/edit.html.erb -->
+<div class="container mt-4">
+  <div class="jumbotron bg-secondary text-white">
+    <h1 class="display-4">Editing Hotel</h1>
+  </div>
 
-<%= render "form", hotel: @hotel %>
+  <%= render 'form', hotel: @hotel %>
 
-<br>
-
-<div>
-  <%= link_to "Show this hotel", @hotel %> |
-  <%= link_to "Back to hotels", hotels_path %>
+  <div class="mt-3">
+    <%= link_to "Show this hotel", @hotel, class: "btn btn-info" %> |
+    <%= link_to "Back to hotels", hotels_path, class: "btn btn-secondary" %>
+  </div>
 </div>
