--- a/app/views/hotels/show.html.erb
+++ b/app/views/hotels/show.html.erb
@@ -1,10 +1,12 @@
-<p style="color: green"><%= notice %></p>
+<% if notice %>
+  <p class="alert alert-success"><%= notice %></p>
+<% end %>
 
 <%= render @hotel %>
 
-<div>
-  <%= link_to "Edit this hotel", edit_hotel_path(@hotel) %> |
-  <%= link_to "Back to hotels", hotels_path %>
-
-  <%= button_to "Destroy this hotel", @hotel, method: :delete %>
+<div class="mt-3">
+  <%= link_to "Edit this hotel", edit_hotel_path(@hotel), class: "btn btn-primary" %>
+  <%= link_to "Back to hotels", hotels_path, class: "btn btn-secondary" %>
+  <%= button_to "Delete this hotel", @hotel, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 </div>
+
