--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,19 +1,53 @@
-<p> nav bar </p>
-<%= link_to "Home", root_path %> &nbsp;
-
-<% if !user_signed_in? %>
-    <%= link_to "Login", new_user_session_path %> &nbsp;
-<% else %>
-    <%= current_user.email %> &nbsp;
-    <%= link_to "Sign out", destroy_user_session_path, 'data-turbo-method': :delete %> &nbsp;
-<% end %>
-
-<%= link_to "All hotels", hotels_path %> &nbsp;
-<%= link_to "About Hotels", about_path %> &nbsp;
-
-<% if current_user.try(:admin?) %>
-    <!-- only visable to admin user -->
-    <span> admin </span>
-    <% end %>
+<!-- app/views/layouts/_nav.html.erb -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <%= link_to "Hotel App", root_path, class: "navbar-brand" %>
     
-<br>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <%= link_to "Home", root_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "All hotels", hotels_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "About Hotels", about_path, class: "nav-link" %>
+        </li>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+          <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <span class="navbar-text mr-2">
+              <%= current_user.email %>
+            </span>
+          </li>
+          <% if current_user.try(:admin?) %>
+            <li class="nav-item">
+              <span class="navbar-text">Admin</span>
+            </li>
+          <% end %>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
+
+
+
+
+
+
+
